# kvmonline4_jtag

./: Cargo.toml  LICENSE  README.md
examples/: arm_debug_halt.rs  arm_debug_midr.rs  arm_register_access.rs  dap_idr.rs  jtag_idcode.rs  jtag_tckloop.rs  safe_ftdi_bitbang.rs
libjtag/: Cargo.toml
libjtag/src/: interface.rs  jtag.rs  lib.rs  target.rs
libjtag/src/interface/: ftdi_bitbang.rs  ftdi_mpsse.rs
libjtag/src/jtag/: dap.rs  jtag.rs  jtag_state_machine.rs
src/: main.rs
