[package]
name = "libjtag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-fsm = "0.6.0"
log = "0.4.0"
safe-ftdi = "0.2.2"
anyhow = "1.0"
bitflags = "1.3.2"
spin = "0.9.2"
bitfield = "0.13.2"
jep106 = "0.2.5"

[features]
default = ["std"]
std = []